style wordpress sidbar

--- a/adhocracy/offenekommune_theme/static/stylesheets/style_custom.css
+++ b/adhocracy/offenekommune_theme/static/stylesheets/style_custom.css
@@ -19,6 +19,20 @@ body.logged_in #nav li a {
   height: 24px;
 }
 
+
+ /*Wordpress pages sidebar*/
+
+#main .widget-area .shailan_SubpagesWidget,
+#main .widget-container ul,
+#main ul.subpages li,
+#main .widget-container {
+  list-style: none;
+  background: none;
+}
+#col3 #secondary {
+  padding-top: 20px;
+}
+
 /*Tabs onboarding aboutpage - style jquery ui wordpress tabs*/
 /* TODO: This could be much shorter or maybe completly removed [joka] */
 
