--- a/adhocracy/offenekommune_theme/static/stylesheets/style_custom.css
+++ b/adhocracy/offenekommune_theme/static/stylesheets/style_custom.css
@@ -44,7 +44,17 @@ padding-top: 8px;
 }
 /* Button border, background, color */
 
-.vote, .vote.big, .vote_count, .button_small, .vote_up, .vote_down {
+a.button_small,
+a.show_comments:hover, a.new_comment:hover, a.participate,
+.vote, .vote.big, .vote_count, .button_small, .vote_up, .vote_down, .vote_,
+.vote.big .vote_down:active, .vote.big .vote_down.active,
+.vote.big .vote_down:hover,
+.vote.big .vote_up:active, .vote.big .vote_up.active,
+.vote.big .vote_up:hover,
+.vote_up:hover,
+.vote_up:active, .vote_up.active,
+.vote_down:hover,
+.vote_down:active, .vote_down.active {
   background-image: url('/static_theme/static/images/sprite_buttons_small.png');
 }
 .vote, .vote.big, .follow_paper, .button_small, a.button, .submit input, submit button {
@@ -154,6 +164,9 @@ li.content_box:nth-child(2n+2) {
   background: #f7f6f4;
   border-bottom: 1px dotted #CCC;
   border-top: 1px dotted #CCC;
+}
+.tooltip {
+  background: #fffde4;
 }
 
 /* extensive border solution below needs to be refined */
