--- a/adhocracy/offenekommune_theme/static/stylesheets/style_custom.css
+++ b/adhocracy/offenekommune_theme/static/stylesheets/style_custom.css
@@ -140,7 +140,7 @@ a.follow_paper,
 }
 
 /* Font */
-h1, h2, h3, h4, h5, a, legend, .tabnav li a.active, .tabnav li a:hover  {
+h1, h2, h3, h4, h5, h1 a, h2 a, h3 a, legend, .tabnav li a.active, .tabnav li a:hover {
   color: #323232;
 }
 
