--- a/adhocracy/offenekommune_theme/static_src/stylesheets/adhocracy.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/adhocracy.scss
@@ -35,6 +35,7 @@
 @import "components/subpages";
 @import "components/tutorial";
 @import "components/ie_message";
+@import "components/grey_box";
 
 // widgets
 @import "widgets/header";
