fix register button hover color

--- a/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
@@ -78,8 +78,11 @@ a.button, #main .joyride-next-tip, #main .joyride-prev-tip {
         border: 1px solid $border !important;
     }
 
-    &.highlight, &.highlight:hover {
+    &.highlight, .register & {
         color: white !important;
+        &:hover {
+            color: white !important;
+        }
     }
 }
 
