--- a/adhocracy/offenekommune_theme/static_src/stylesheets/general/_mixins_overwrite.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/general/_mixins_overwrite.scss
@@ -2,7 +2,7 @@
     background-color: $color;
     @include background-image(linear-gradient(to bottom, lighten($color, 14%), $color));
 
-    &:hover {
+    &:hover, &:focus {
         background-color: darken($color, 7%);
         @include background-image(linear-gradient(to top, lighten($color, 14%) 30%, $color 70%));
     }
@@ -13,7 +13,7 @@
     background-color: #fff;
     @include background-image(linear-gradient(to top, darken(#fff, 4%), #fff));
     border: 1px solid $border;
-    &:hover {
+    &:hover, &:focus {
         background-color: darken(#fff, 2%);
         @include background-image(linear-gradient(to top, darken(#fff, 6%), darken(#fff, 2%)));
     }
