--- a/adhocracy/offenekommune_theme/static_src/stylesheets/adhocracy.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/adhocracy.scss
@@ -55,7 +55,7 @@
 @import "widgets/sectionpage";
 @import "widgets/dashboard";
 
-//@import "geo";
+@import "geo";
 
 // overwrite
 @import "overwrite";
