--- a/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
@@ -154,3 +154,21 @@ a.new_comment {
         color: inherit;
     }
 }
+
+/*Wordpress pages sidebar*/
+.subpages {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    ul {
+        list-style-type: none;
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .current_page_item > a {
+        font-weight: bold;
+    }
+}
