--- a/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
@@ -161,6 +161,9 @@ a.new_comment {
     padding: 0;
     margin: 0;
 
+    > li {
+        padding-top: 0.3em;
+    }
     ul {
         list-style-type: none;
         padding-top: 0;
