update to develop

--- a/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
@@ -63,8 +63,7 @@ body.logged_in #logo img {
 a.button,
 #main .joyride-next-tip,
 #main .joyride-prev-tip,
-#searchform #searchsubmit,
-.list_form input.go {
+.search_button {
     color: $black;
     border: 1px solid $border;
 
