--- a/adhocracy/offenekommune_theme/static_src/stylesheets/adhocracy.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/adhocracy.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 // mixins
 @import "compass/css3";
 @import "compass/utilities/general/clearfix";
@@ -19,13 +21,13 @@
 @import "general/html5";
 
 // components
+@import "components/adhocracy_icons";
 @import "components/bootstrap_forms";
 @import "components/forms";
 @import "components/type";
 @import "components/morelink";
 @import "components/showmore";
 @import "components/bootstrap_nav";
-@import "components/tooltip";
 @import "components/badge";
 @import "components/button";
 @import "components/modals";
@@ -55,6 +57,7 @@
 @import "widgets/openid";
 @import "widgets/sectionpage";
 @import "widgets/dashboard";
+@import "widgets/event_carousel";
 
 @import "geo";
 
