add search button border

--- a/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
+++ b/adhocracy/offenekommune_theme/static_src/stylesheets/_overwrite.scss
@@ -64,6 +64,9 @@ body.logged_in #logo img {
     padding-left: 11px;
     padding-right: 11px;
 }
+.searchform button[type="submit"] {
+    border: 1px solid $border;
+}
 
 /* button */
 a.button,
